<resources>
    <string name="app_name" translatable="false">HeartRateMonitor</string>
    <string name="about_view">About</string>
    <string name="settings_view">Settings</string>
    <string name="home_view">Home</string>
    <string name="history_view">History</string>

    <string name="heart_rate_view_title">Measure heart rate</string>

    <string name="text_heart_rate_idle">Press button to start measuring</string>
    <string name="text_heart_rate" translatable="false">%1$s bpm</string>
    <string name="text_heart_rate_accuracy">Current accuracy: %1$s</string>
    <string name="button_measure_heart_rate">Measure</string>
    <string name="button_measure_heart_rate_stop">Stop measuring</string>

    <string name="body_sensors_permission_dialog_title">Body Sensors Permission Required</string>
    <string name="body_sensors_permission_dialog_message">Body sensors permission is required to measure heart rate. Please grant the permission in the app settings.</string>
    <string name="body_sensors_permission_dialog_go_to_settings">Go to Settings</string>
    <string name="cancel">Cancel</string>

    <string name="about_description" translatable="false">This is a very simple Android app to measure your heart rate, using your phones heart rate sensor.\n\nI mainly made this app because I wanted to get readings from the sensor without using Samsung Health. It should work with all phones that have an integrated heart rate sensor like the Samsung Galaxy S7, S8, S9, S10 and more.</string>

    <string name="settings_appearance">Appearance</string>
    <string name="settings_theme">Theme</string>
    <string name="theme_system">Follow system</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="amoled_theme">AMOLED dark theme</string>
    <string name="amoled_theme_summary">Use AMOLED theme with a pure black background</string>

    <string name="settings_history">History</string>
    <string name="save_history">Save history</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_history_dialog_message">Clear all history?</string>
</resources>