<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="me.ecogaming.heartratemonitor.fragments.HomeFragment"
        android:label="@string/home_view"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_heartRateFragment"
            app:destination="@id/heartRateFragment" />
        <action
            android:id="@+id/action_homeFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/heartRateFragment"
        android:name="me.ecogaming.heartratemonitor.fragments.HeartRateFragment"
        android:label="@string/heart_rate_view_title"
        tools:layout="@layout/fragment_heart_rate" >
        <action
            android:id="@+id/action_heartRateFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="me.ecogaming.heartratemonitor.fragments.AboutFragment"
        android:label="@string/about_view"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_aboutFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="me.ecogaming.heartratemonitor.fragments.SettingsFragment"
        android:label="@string/settings_view" >
        <action
            android:id="@+id/action_settingsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
</navigation>